<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/_20sdp">

                <RelativeLayout
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:gravity="center"
                    android:background="@drawable/bg_back_button">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        app:civ_border_color="@color/colorTransparent"
                        app:civ_border_width="2dp"
                        android:src="@drawable/ic_profile"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp">
                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:gravity="center"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/colorgreenish20"
                        android:fontFamily="@font/poppins_bold"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/LLEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewStyleMedium"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/gray8"
                    android:text="Edit Profile"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_50sdp"
                    android:paddingRight="@dimen/_50sdp"
                    android:background="@drawable/aaa"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <!-- General Information-->
                <LinearLayout
                    android:id="@+id/LL_General_Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_about"
                        android:tint="@color/colorAccent"
                        android:background="@drawable/bg_icon_button"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/str_general_info"
                        android:textColor="@color/gray8"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow"
                        android:tint="@color/colorBlack"
                        android:background="@drawable/bg_back_button"/>
                </LinearLayout>

                <!--My Voucher-->
                <LinearLayout
                    android:id="@+id/LL_My_Voucher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_my_card"
                        android:tint="@color/colorAccent"
                        android:background="@drawable/bg_icon_button"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/str_my_voucher"
                        android:textColor="@color/gray8"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow"
                        android:tint="@color/colorBlack"
                        android:background="@drawable/bg_back_button"/>
                </LinearLayout>

                <!--Notification-->
                <LinearLayout
                    android:id="@+id/LL_Notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_notifications"
                        android:tint="@color/colorAccent"
                        android:background="@drawable/bg_icon_button"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Notifications"
                        android:textColor="@color/gray8"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow"
                        android:tint="@color/colorBlack"
                        android:background="@drawable/bg_back_button"/>
                </LinearLayout>

                <!--Chat-->
                <LinearLayout
                    android:id="@+id/LL_Chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_rate_review"
                        android:tint="@color/colorAccent"
                        android:background="@drawable/bg_icon_button"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Complaint"
                        android:textColor="@color/gray8"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow"
                        android:tint="@color/colorBlack"
                        android:background="@drawable/bg_back_button"/>
                </LinearLayout>


                <!--Reports-->
                <LinearLayout
                    android:id="@+id/LL_Reports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_report_24"
                        android:tint="@color/colorAccent"
                        android:background="@drawable/bg_icon_button"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Reports"
                        android:textColor="@color/gray8"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow"
                        android:tint="@color/colorBlack"
                        android:background="@drawable/bg_back_button"/>
                </LinearLayout>



                <!--Logout-->
                <LinearLayout
                    android:id="@+id/LL_Logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_logout"
                        android:tint="@color/colorAccent"
                        android:background="@drawable/bg_icon_button"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/str_logout"
                        android:textColor="@color/gray8"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginLeft="@dimen/_20sdp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow"
                        android:tint="@color/colorBlack"
                        android:background="@drawable/bg_back_button"/>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/LL_Terms_Conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_terms_conditions"
                        android:tint="@color/colorgreenish20"/>
                    <TextView
                        style="@style/TextViewStyleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_terms_condition"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textColor="@color/colorgreenish20"
                        android:textSize="@dimen/_13sdp"
                        android:drawableRight="@drawable/ic_keyboard_arrow"
                        android:drawableTint="@color/colorLightGray"/>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/LL_Privacy_Policyn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_privacy"
                        android:tint="@color/colorgreenish20"/>
                    <TextView
                        style="@style/TextViewStyleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_privacy_policy"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textColor="@color/colorgreenish20"
                        android:textSize="@dimen/_13sdp"
                        android:drawableRight="@drawable/ic_keyboard_arrow"
                        android:drawableTint="@color/colorLightGray"/>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/LL_Help_Centeron"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_help"
                        android:tint="@color/colorgreenish20"/>
                    <TextView
                        style="@style/TextViewStyleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_help_center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textColor="@color/colorgreenish20"
                        android:textSize="@dimen/_13sdp"
                        android:drawableRight="@drawable/ic_keyboard_arrow"
                        android:drawableTint="@color/colorLightGray"/>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/LL_About_Us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_about"
                        android:tint="@color/colorgreenish20"/>
                    <TextView
                        style="@style/TextViewStyleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_about_us"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textColor="@color/colorgreenish20"
                        android:textSize="@dimen/_13sdp"
                        android:drawableRight="@drawable/ic_keyboard_arrow"
                        android:drawableTint="@color/colorLightGray"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
